# dossierfacile-file-analysis

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml
src/dossierfacile_file_analysis/: main.py
src/dossierfacile_file_analysis/custom_logging/: json_formatter.py  logging_config.py  tcp_handler.py
src/dossierfacile_file_analysis/data/: file_dto.py
src/dossierfacile_file_analysis/exceptions/: data_not_found.py  encryption_key_is_missing.py  invalid_message_body_format.py  invalid_mime_type.py  retryable_exception.py
src/dossierfacile_file_analysis/executor/: blurry_executor.py
src/dossierfacile_file_analysis/executor/tasks/: abstract_blurry_task.py  analyse_files.py  clean_data.py  download_file.py  get_data_from_db.py  prepare_data_for_analysis.py  save_blurry_result_to_db.py
src/dossierfacile_file_analysis/models/: blurry_execution_context.py  blurry_queue_message.py  blurry_result.py  downloaded_file.py  input_analysis_data.py  supported_content_type.py
src/dossierfacile_file_analysis/services/: amqp_service.py  arg_provider_service.py  blurry_message_processor.py  dossier_facile_database_service.py
src/dossierfacile_file_analysis/services/fileDownloader/: file_downloader.py  local_file_downloader.py  ovh_file_downloader.py
src/dossierfacile_file_analysis/services/file_downloader/: file_downloader.py  local_file_downloader.py  ovh_file_downloader.py  s3_file_downloader.py
tests/: test_amqp_service.py
tests/executor/tasks/: test_analyse_files.py  test_download_file.py  test_get_data_from_db.py  test_prepare_data_for_analysis.py
