[tool.poetry]
name = "dossierfacile-file-analysis"
version = "0.1.0"
description = ""
authors = ["SAGON NICOLAS <sagon.nicolas@gmail.com>"]
readme = "README.md"
packages = [{include = "dossierfacile_file_analysis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.1.1"
pika = "^1.3.2"
opencv-python-headless = "^4.11.0.86"
elastic-apm = "^6.23.0"
psutil = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
